--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Calculadora de nota média</title>
-  <link rel="stylesheet" href="/calculadora-de-nota-media/style.css">
+  <link rel="stylesheet" href="/style.css">
 
 </head>
 
@@ -41,7 +41,7 @@
     </a>
 
 
-    <script src="/calculadora-de-nota-media/script.js"></script>
+    <script src="/script.js"></script>
 
 </body>
 
